<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:showDividers="middle"
        android:divider="?android:dividerVertical"
        android:dividerPadding="12dp">

        <ImageButton
            style="?android:actionButtonStyle"
            android:id="@+id/actionbar_done"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_ab_done"
            android:background="@drawable/white_selectable_bg"
            android:contentDescription="@string/done"/>

        <TextView
            style="@style/TextAppearance.Muzei.Medium"
            android:id="@+id/actionbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/app_name"/>

    </LinearLayout>

    <ImageButton
        style="?android:actionButtonStyle"
        android:id="@+id/actionbar_overflow"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:visibility="gone"
        android:src="@drawable/ic_ab_overflow"
        android:background="@drawable/white_selectable_bg"
        android:contentDescription="@string/contentdesc_overflow"/>

</RelativeLayout>
